src/main/java/com/rapiddweller/script/antlr/DatabeneScriptParser.java
/*
 * Copyright (C) 2011-2014 Volker Bergmann (volker.bergmann@bergmann-it.de).
 * All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
// $ANTLR 3.3 Nov 30, 2010 12:45:30 src/main/g/Benerator.g 2011-07-22 08:59:44

package com.rapiddweller.script.antlr;


import org.antlr.runtime.*;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.RewriteRuleSubtreeStream;
import org.antlr.runtime.tree.RewriteRuleTokenStream;
import org.antlr.runtime.tree.TreeAdaptor;

import javax.annotation.processing.Generated;
import java.util.HashMap;

@Generated("ANTLR") // this is code generated by ANTLR
@SuppressWarnings("all")
public class DatabeneScriptParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDENTIFIER", "INTLITERAL", "DECIMALLITERAL", "STRINGLITERAL", "BOOLEANLITERAL", "NULL", "TYPE", "NEGATION", "INDEX", "FIELD", "ARGUMENTS", "CAST", "CONSTRUCTOR", "INVOCATION", "SUBINVOCATION", "QUALIFIEDNAME", "BEAN", "BEANSPEC", "HexPrefix", "HexDigit", "Exponent", "EscapeSequence", "WS", "COMMENT", "LINE_COMMENT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "SEMI", "COMMA", "DOT", "EQ", "BANG", "TILDE", "QUES", "COLON", "EQEQ", "AMPAMP", "BARBAR", "PLUS", "SUB", "STAR", "SLASH", "AMP", "BAR", "CARET", "PERCENT", "MONKEYS_AT", "BANGEQ", "GT", "SHIFT_RIGHT", "SHIFT_RIGHT2", "SHIFT_LEFT", "GE", "LT", "LE", "ARROW", "IdentifierStart", "IdentifierPart", "'new'"
    };
    public static final int EOF=-1;
    public static final int T__66=66;
    public static final int IDENTIFIER=4;
    public static final int INTLITERAL=5;
    public static final int DECIMALLITERAL=6;
    public static final int STRINGLITERAL=7;
    public static final int BOOLEANLITERAL=8;
    public static final int NULL=9;
    public static final int TYPE=10;
    public static final int NEGATION=11;
    public static final int INDEX=12;
    public static final int FIELD=13;
    public static final int ARGUMENTS=14;
    public static final int CAST=15;
    public static final int CONSTRUCTOR=16;
    public static final int INVOCATION=17;
    public static final int SUBINVOCATION=18;
    public static final int QUALIFIEDNAME=19;
    public static final int BEAN=20;
    public static final int BEANSPEC=21;
    public static final int HexPrefix=22;
    public static final int HexDigit=23;
    public static final int Exponent=24;
    public static final int EscapeSequence=25;
    public static final int WS=26;
    public static final int COMMENT=27;
    public static final int LINE_COMMENT=28;
    public static final int LPAREN=29;
    public static final int RPAREN=30;
    public static final int LBRACE=31;
    public static final int RBRACE=32;
    public static final int LBRACKET=33;
    public static final int RBRACKET=34;
    public static final int SEMI=35;
    public static final int COMMA=36;
    public static final int DOT=37;
    public static final int EQ=38;
    public static final int BANG=39;
    public static final int TILDE=40;
    public static final int QUES=41;
    public static final int COLON=42;
    public static final int EQEQ=43;
    public static final int AMPAMP=44;
    public static final int BARBAR=45;
    public static final int PLUS=46;
    public static final int SUB=47;
    public static final int STAR=48;
    public static final int SLASH=49;
    public static final int AMP=50;
    public static final int BAR=51;
    public static final int CARET=52;
    public static final int PERCENT=53;
    public static final int MONKEYS_AT=54;
    public static final int BANGEQ=55;
    public static final int GT=56;
    public static final int SHIFT_RIGHT=57;
    public static final int SHIFT_RIGHT2=58;
    public static final int SHIFT_LEFT=59;
    public static final int GE=60;
    public static final int LT=61;
    public static final int LE=62;
    public static final int ARROW=63;
    public static final int IdentifierStart=64;
    public static final int IdentifierPart=65;

    // delegates
    // delegators


        public DatabeneScriptParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public DatabeneScriptParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[74+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return DatabeneScriptParser.tokenNames; }
    public String getGrammarFileName() { return "src/main/g/Benerator.g"; }


    protected void mismatch(IntStream input, int ttype, BitSet follow)
      throws RecognitionException
    {
      throw new MismatchedTokenException(ttype, input);
    }

    public Object recoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow)
      throws RecognitionException
    {
      throw e;
    }


    public static class weightedLiteralList_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "weightedLiteralList"
    // src/main/g/Benerator.g:96:1: weightedLiteralList : weightedLiteral ( ',' weightedLiteral )* ;
    public final DatabeneScriptParser.weightedLiteralList_return weightedLiteralList() throws RecognitionException {
        DatabeneScriptParser.weightedLiteralList_return retval = new DatabeneScriptParser.weightedLiteralList_return();
        retval.start = input.LT(1);
        int weightedLiteralList_StartIndex = input.index();
        Object root_0 = null;

        Token char_literal2=null;
        DatabeneScriptParser.weightedLiteral_return weightedLiteral1 = null;

        DatabeneScriptParser.weightedLiteral_return weightedLiteral3 = null;


        Object char_literal2_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // src/main/g/Benerator.g:101:5: ( weightedLiteral ( ',' weightedLiteral )* )
            // src/main/g/Benerator.g:101:9: weightedLiteral ( ',' weightedLiteral )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_weightedLiteral_in_weightedLiteralList90);
            weightedLiteral1=weightedLiteral();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, weightedLiteral1.getTree());
            // src/main/g/Benerator.g:101:25: ( ',' weightedLiteral )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==COMMA) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // src/main/g/Benerator.g:101:26: ',' weightedLiteral
            	    {
            	    char_literal2=(Token)match(input,COMMA,FOLLOW_COMMA_in_weightedLiteralList93); if (state.failed) return retval;
            	    pushFollow(FOLLOW_weightedLiteral_in_weightedLiteralList96);
            	    weightedLiteral3=weightedLiteral();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, weightedLiteral3.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e) {
          throw e;
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, weightedLiteralList_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "weightedLiteralList"

    public static class weightedLiteral_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "weightedLiteral"
    // src/main/g/Benerator.g:103:1: weightedLiteral : literal ( '^' expression )? ;
    public final DatabeneScriptParser.weightedLiteral_return weightedLiteral() throws RecognitionException {
        DatabeneScriptParser.weightedLiteral_return retval = new DatabeneScriptParser.weightedLiteral_return();
        retval.start = input.LT(1);
        int weightedLiteral_StartIndex = input.index();
        Object root_0 = null;

        Token char_literal5=null;
        DatabeneScriptParser.literal_return literal4 = null;

        DatabeneScriptParser.expression_return expression6 = null;


        Object char_literal5_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // src/main/g/Benerator.g:104:5: ( literal ( '^' expression )? )
            // src/main/g/Benerator.g:104:9: literal ( '^' expression )?
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_literal_in_weightedLiteral113);
            literal4=literal();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, literal4.getTree());
            // src/main/g/Benerator.g:104:17: ( '^' expression )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==CARET) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // src/main/g/Benerator.g:104:18: '^' expression
                    {
                    char_literal5=(Token)match(input,CARET,FOLLOW_CARET_in_weightedLiteral116); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    char_literal5_tree = (Object)adaptor.create(char_literal5);
                    root_0 = (Object)adaptor.becomeRoot(char_literal5_tree, root_0);
                    }
                    pushFollow(FOLLOW_expression_in_weightedLiteral119);
                    expression6=expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, expression6.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e) {
          throw e;
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, weightedLiteral_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "weightedLiteral"

    public static class transitionList_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "transitionList"
    // src/main/g/Benerator.g:106:1: transitionList : transition ( ',' transition )* ;
    public final DatabeneScriptParser.transitionList_return transitionList() throws RecognitionException {
        DatabeneScriptParser.transitionList_return retval = new DatabeneScriptParser.transitionList_return();
        retval.start = input.LT(1);
        int transitionList_StartIndex = input.index();
        Object root_0 = null;

        Token char_literal8=null;
        DatabeneScriptParser.transition_return transition7 = null;

        DatabeneScriptParser.transition_return transition9 = null;


        Object char_literal8_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // src/main/g/Benerator.g:107:5: ( transition ( ',' transition )* )
            // src/main/g/Benerator.g:107:9: transition ( ',' transition )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_transition_in_transitionList135);
            transition7=transition();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, transition7.getTree());
            // src/main/g/Benerator.g:107:20: ( ',' transition )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==COMMA) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // src/main/g/Benerator.g:107:21: ',' transition
            	    {
            	    char_literal8=(Token)match(input,COMMA,FOLLOW_COMMA_in_transitionList138); if (state.failed) return retval;
            	    pushFollow(FOLLOW_transition_in_transitionList141);
            	    transition9=transition();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, transition9.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e) {
          throw e;
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, transitionList_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "transitionList"

    public static class transition_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "transition"
    // src/main/g/Benerator.g:109:1: transition : literal '->' literal ( '^' expression )? ;
    public final DatabeneScriptParser.transition_return transition() throws RecognitionException {
        DatabeneScriptParser.transition_return retval = new DatabeneScriptParser.transition_return();
        retval.start = input.LT(1);
        int transition_StartIndex = input.index();
        Object root_0 = null;

        Token string_literal11=null;
        Token char_literal13=null;
        DatabeneScriptParser.literal_return literal10 = null;

        DatabeneScriptParser.literal_return literal12 = null;

        DatabeneScriptParser.expression_return expression14 = null;


        Object string_literal11_tree=null;
        Object char_literal13_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // src/main/g/Benerator.g:110:5: ( literal '->' literal ( '^' expression )? )
            // src/main/g/Benerator.g:110:9: literal '->' literal ( '^' expression )?
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_literal_in_transition157);
            literal10=literal();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, literal10.getTree());
            string_literal11=(Token)match(input,ARROW,FOLLOW_ARROW_in_transition159); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            string_literal11_tree = (Object)adaptor.create(string_literal11);
            root_0 = (Object)adaptor.becomeRoot(string_literal11_tree, root_0);
            }
            pushFollow(FOLLOW_literal_in_transition162);
            literal12=literal();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, literal12.getTree());
            // src/main/g/Benerator.g:110:31: ( '^' expression )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==CARET) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // src/main/g/Benerator.g:110:32: '^' expression
                    {
                    char_literal13=(Token)match(input,CARET,FOLLOW_CARET_in_transition165); if (state.failed) return retval;
                    pushFollow(FOLLOW_expression_in_transition168);
                    expression14=expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, expression14.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e) {
          throw e;
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, transition_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "transition"

    public static class beanSpecList_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "beanSpecList"
    // src/main/g/Benerator.g:112:1: beanSpecList : beanSpec ( ',' beanSpec )* ;
    public final DatabeneScriptParser.beanSpecList_return beanSpecList() throws RecognitionException {
        DatabeneScriptParser.beanSpecList_return retval = new DatabeneScriptParser.beanSpecList_return();
        retval.start = input.LT(1);
        int beanSpecList_StartIndex = input.index();
        Object root_0 = null;

        Token char_literal16=null;
        DatabeneScriptParser.beanSpec_return beanSpec15 = null;

        DatabeneScriptParser.beanSpec_return beanSpec17 = null;


        Object char_literal16_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
            // src/main/g/Benerator.g:113:5: ( beanSpec ( ',' beanSpec )* )
            // src/main/g/Benerator.g:113:9: beanSpec ( ',' beanSpec )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_beanSpec_in_beanSpecList184);
            beanSpec15=beanSpec();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, beanSpec15.getTree());
            // src/main/g/Benerator.g:113:18: ( ',' beanSpec )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COMMA) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // src/main/g/Benerator.g:113:19: ',' beanSpec
            	    {
            	    char_literal16=(Token)match(input,COMMA,FOLLOW_COMMA_in_beanSpecList187); if (state.failed) return retval;
            	    pushFollow(FOLLOW_beanSpec_in_beanSpecList190);
            	    beanSpec17=beanSpec();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, beanSpec17.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e) {
          throw e;
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 5, beanSpecList_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "beanSpecList"

    public static class beanSpec_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "beanSpec"
    // src/main/g/Benerator.g:115:1: beanSpec : expression -> ^( BEANSPEC expression ) ;
    public final DatabeneScriptParser.beanSpec_return beanSpec() throws RecognitionException {
        DatabeneScriptParser.beanSpec_return retval = new DatabeneScriptParser.beanSpec_return();
        retval.start = input.LT(1);
        int beanSpec_StartIndex = input.index();
        Object root_0 = null;

        DatabeneScriptParser.expression_return expression18 = null;


        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return retval; }
            // src/main/g/Benerator.g:116:5: ( expression -> ^( BEANSPEC expression ) )
            // src/main/g/Benerator.g:116:9: expression
            {
            pushFollow(FOLLOW_expression_in_beanSpec206);
            expression18=expression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_expression.add(expression18.getTree());


            // AST REWRITE
            // elements: expression
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 116:20: -> ^( BEANSPEC expression )
            {
                // src/main/g/Benerator.g:116:23: ^( BEANSPEC expression )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(BEANSPEC, "BEANSPEC"), root_1);

                adaptor.addChild(root_1, stream_expression.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e) {
          throw e;
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 6, beanSpec_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "beanSpec"

    public static class expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expression"
    // src/main/g/Benerator.g:118:1: expression : ( conditionalExpression | assignment );
    public final DatabeneScriptParser.expression_return expression() throws RecognitionException {
        DatabeneScriptParser.expression_return retval = new DatabeneScriptParser.expression_return();
        retval.start = input.LT(1);
        int expression_StartIndex = input.index();
        Object root_0 = null;

        DatabeneScriptParser.conditionalExpression_return conditionalExpression19 = null;

        DatabeneScriptParser.assignment_return assignment20 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return retval; }
            // src/main/g/Benerator.g:119:5: ( conditionalExpression | assignment )
            int alt6=2;
            alt6 = dfa6.predict(input);
            switch (alt6) {
                case 1 :
                    // src/main/g/Benerator.g:119:9: conditionalExpression
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_conditionalExpression_in_expression229);
                    conditionalExpression19=conditionalExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, conditionalExpression19.getTree());

                    }
                    break;
                case 2 :
                    // src/main/g/Benerator.g:120:9: assignment
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_assignment_in_expression239);
                    assignment20=assignment();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, assignment20.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e) {
          throw e;
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 7, expression_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "expression"

    public static class assignment_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "assignment"
    // src/main/g/Benerator.g:123:1: assignment : qualifiedName '=' expression ;
    public final DatabeneScriptParser.assignment_return assignment() throws RecognitionException {
        DatabeneScriptParser.assignment_return retval = new DatabeneScriptParser.assignment_return();
        retval.start = input.LT(1);
        int assignment_StartIndex = input.index();
        Object root_0 = null;

        Token char_literal22=null;
        DatabeneScriptParser.qualifiedName_return qualifiedName21 = null;

        DatabeneScriptParser.expression_return expression23 = null;


        Object char_literal22_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 8) ) { return retval; }
            // src/main/g/Benerator.g:124:5: ( qualifiedName '=' expression )
            // src/main/g/Benerator.g:124:9: qualifiedName '=' expression
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_qualifiedName_in_assignment258);
            qualifiedName21=qualifiedName();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, qualifiedName21.getTree());
            char_literal22=(Token)match(input,EQ,FOLLOW_EQ_in_assignment260); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            char_literal22_tree = (Object)adaptor.create(char_literal22);
            root_0 = (Object)adaptor.becomeRoot(char_literal22_tree, root_0);
            }
            pushFollow(FOLLOW_expression_in_assignment263);
            expression23=expression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, expression23.getTree());

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {
